Fixed alignment and position on elements

--- a/webapp/src/App.scss
+++ b/webapp/src/App.scss
@@ -38,11 +38,11 @@ $form-floating-input-padding-b: 1.625rem;
 }
 
 .fit-to-height {
-  max-height: calc(100vh - 8.5em);
+  max-height: calc(100vh - 6em);
 }
 
 .item-list {
-  max-height: calc(100vh - 14.5em);
+  max-height: calc(100vh - 18em);
 }
 
 .item-list-element:hover {
@@ -85,6 +85,10 @@ $form-floating-input-padding-b: 1.625rem;
   background-color: #f1dcf5 !important;
 }
 
+.searchFormGroup {
+  margin: 20px 0;
+}
+
 .backButton {
   width: 100%;
 }
@@ -114,7 +118,7 @@ $form-floating-input-padding-b: 1.625rem;
   padding: 24px 10px;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-bottom: 10px;
+  margin: 20px 0;
 }
 
 .input-section {
@@ -128,7 +132,6 @@ $form-floating-input-padding-b: 1.625rem;
 
 .input-section:focus {
   border: 0px;
-
   background-color: #f4f4f4;
 }
 
@@ -140,11 +143,33 @@ $form-floating-input-padding-b: 1.625rem;
   padding: 0px;
   background-color: $secondary;
   border-radius: 7px;
-  margin: 3px;
+  margin: 0;
 }
 
 .inputSectionDiv > p {
   text-align: center;
   color: #505050;
   font-size: 10px;
+}
+
+@media only screen and (max-width: 992px) {
+  .detailsViewInsideDiv {
+    padding: 0px;
+    border-radius: 10px;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 6px 20px 0 rgba(0, 0, 0, 0) !important;
+    margin: 20px 0;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .inputSectionDiv {
+    padding: 0px;
+    background-color: $secondary;
+    border-radius: 7px;
+    margin: 10px 12px;
+  }
+
+  .detailsView {
+    padding: 0px;
+  }
 }
